Enhance product management and UI components
Updated PriceBoard and Index for better UI/UX. Enhanced ProductsList with new features and layout improvements. Added form and logic for creating products in Create.razor. Updated validation rules and messages. Disabled service worker for development. Added utility methods for random number and barcode generation.

--- a/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
@@ -42,7 +42,7 @@
                     <MudIcon Icon="@Icons.Material.Filled.KeyboardArrowDown"></MudIcon> @context.Change
                 </div>
             }
-            else if (!context.Change.Contains("(0%"))
+            else if (!context.Change.Contains("(0.00%)"))
             {
                 <div class="green-text">
                     <MudIcon Icon="@Icons.Material.Filled.KeyboardArrowUp"></MudIcon> @context.Change
@@ -50,7 +50,7 @@
             }
             else
             {
-                @context.Change
+                <MudIcon Icon="@Icons.Material.Filled.Remove"></MudIcon> @context.Change
             }
         </MudTd>
         <MudTd DataLabel="تاریخ بروزرسانی">@context.LastUpdate</MudTd>
