--- a/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using GoldEx.Client.Components.Services
+@inherits LayoutComponentBase
 
 <PageTitle>گلدکس</PageTitle>
 
