Add update products with sync

--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -18,3 +18,4 @@
 @using GoldEx.Sdk.Common
 @using GoldEx.Client.Pages.Products.Components
 @using GoldEx.Client.Pages.Products.ViewModels
+@using GoldEx.Shared.Enums
