--- a/src/App/Client/GoldEx.Client/Pages/Products/Components/Update.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Products/Components/Update.razor
@@ -1,19 +1,19 @@
 ﻿@inherits GoldExComponentBase
 
-<EditForm Model="@_model" OnValidSubmit="OnValidSubmit">
+<EditForm Model="@Model" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator />
 
     <MudDialog>
         <DialogContent>
             <MudGrid>
                 <MudItem xs="12" md="12" lg="12">
-                    <MudTextField Label="عنوان" @bind-Value="_model.Name" For="@(() => _model.Name)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                    <MudTextField Label="عنوان" @bind-Value="Model.Name" For="@(() => Model.Name)" Variant="Variant.Outlined" Margin="Margin.Dense" />
                 </MudItem>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudNumericField Label="وزن" @bind-Value="_model.Weight" For="@(() => _model.Weight)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                    <MudNumericField Label="وزن" @bind-Value="Model.Weight" For="@(() => Model.Weight)" Variant="Variant.Outlined" Margin="Margin.Dense" />
                 </MudItem>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudSelect T="ProductType" Label="نوع جنس" @bind-Value="_model.ProductType" For="() => _model.ProductType" Margin="Margin.Dense" Variant="Variant.Outlined">
+                    <MudSelect T="ProductType" Label="نوع جنس" @bind-Value="Model.ProductType" For="() => Model.ProductType" Margin="Margin.Dense" Variant="Variant.Outlined">
                         @foreach (ProductType productType in Enum.GetValues(typeof(ProductType)))
                         {
                             <MudSelectItem T="ProductType" Value="productType">@productType.GetDisplayName()</MudSelectItem>
@@ -21,10 +21,10 @@
                     </MudSelect>
                 </MudItem>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudNumericField @bind-Value="_model.Wage" For="@(() => _model.Wage)" Label="اجرت" Margin="Margin.Dense" Step="1" T="double?" Variant="Variant.Outlined"/>
+                    <MudNumericField @bind-Value="Model.Wage" For="@(() => Model.Wage)" Label="اجرت" Margin="Margin.Dense" Step="1" T="double?" Variant="Variant.Outlined" />
                 </MudItem>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudSelect T="WageType?" Label="نوع اجرت" @bind-Value="_model.WageType" Margin="Margin.Dense" Variant="Variant.Outlined">
+                    <MudSelect T="WageType?" Label="نوع اجرت" @bind-Value="Model.WageType" Margin="Margin.Dense" Variant="Variant.Outlined">
                         <MudSelectItem Value="@((WageType?)null)">ندارد</MudSelectItem>
                         @foreach (WageType wageType in Enum.GetValues(typeof(WageType)))
                         {
@@ -33,7 +33,7 @@
                     </MudSelect>
                 </MudItem>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudSelect T="CaratType" Label="عیار" @bind-Value="_model.CaratType" For="() => _model.CaratType" Margin="Margin.Dense" Variant="Variant.Outlined">
+                    <MudSelect T="CaratType" Label="عیار" @bind-Value="Model.CaratType" For="() => Model.CaratType" Margin="Margin.Dense" Variant="Variant.Outlined">
                         @foreach (CaratType caratType in Enum.GetValues(typeof(CaratType)))
                         {
                             <MudSelectItem T="CaratType" Value="caratType">@caratType.GetDisplayName()</MudSelectItem>
@@ -43,7 +43,7 @@
                 <MudItem xs="12" md="6" lg="6">
                     <MudStack Row AlignItems="AlignItems.Center">
                         <MudItem xs="10">
-                            <MudTextField Label="بارکد" @bind-Value="_model.Barcode" For="@(() => _model.Barcode)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                            <MudTextField Label="بارکد" @bind-Value="Model.Barcode" For="@(() => Model.Barcode)" Variant="Variant.Outlined" Margin="Margin.Dense" />
                         </MudItem>
                         <MudItem xs="2">
                             <MudIconButton Color="Color.Primary" OnClick="@(_ => GenerateBarcode())" Icon="@Icons.Material.Filled.Refresh" Variant="Variant.Filled"></MudIconButton>
@@ -57,7 +57,7 @@
             <MudButton Class="m-3" Color="Color.Primary" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Disabled="@_processing">
                 @if (_processing)
                 {
-                    <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true"/>
+                    <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
                     <MudText Class="ms-2">در حال ذخیره</MudText>
                 }
                 else
