--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -19,3 +19,4 @@
 @using GoldEx.Client.Pages.Products.Components
 @using GoldEx.Client.Pages.Products.ViewModels
 @using GoldEx.Shared.Enums
+@using GoldEx.Client.Pages.Calculate.Components
