--- a/src/App/Client/GoldEx.Client.Components/Layouts/Components/NavMenu.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/Components/NavMenu.razor
@@ -11,6 +11,7 @@
         <Authorized>
             <MudNavLink Href="@ClientRoutes.Products.Index" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.ShoppingCart">اجناس من</MudNavLink>
             <MudNavLink Href="@ClientRoutes.Accounts.Manage.Index" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person">مدیریت حساب</MudNavLink>
+            <MudNavLink Href="@ClientRoutes.Settings.Index" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">تنظیمات</MudNavLink>
             <MudNavLink Href="@ApiUrls.Account.Logout(_currentUrl)" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Logout">خروج</MudNavLink>
         </Authorized>
     </AuthorizeView>
