--- a/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsLayout.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsLayout.razor
@@ -26,6 +26,6 @@
     private readonly List<BreadcrumbItem> _breadcrumbs =
     [
         new BreadcrumbItem("صفحه اصلی", href: ClientRoutes.Home.Index, icon: Icons.Material.Filled.Home),
-        new BreadcrumbItem("تنظیمات", href: ClientRoutes.Home.Index, icon: Icons.Material.Filled.Settings)
+        new BreadcrumbItem("تنظیمات", href: ClientRoutes.Settings.Index, icon: Icons.Material.Filled.Settings)
     ];
 }
