--- a/src/App/Client/GoldEx.Client/Pages/Products/Components/ProductsList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Products/Components/ProductsList.razor
@@ -30,7 +30,7 @@
         <MudTd DataLabel="نوع جنس">@context.ProductType.GetDisplayName()</MudTd>
         <MudTd DataLabel="عنوان">@context.Name</MudTd>
         <MudTd DataLabel="وزن">@(context.Weight + " گرم")</MudTd>
-        <MudTd DataLabel="اجرت">@(context.WageType.HasValue ? $"{context.Wage} {context.WageType.GetDisplayName()}" : "ندارد")</MudTd>
+        <MudTd DataLabel="اجرت">@(context.WageType.HasValue ? $"{context.Wage:N0} {context.WageType.GetDisplayName()}" : "ندارد")</MudTd>
         <MudTd DataLabel="عیار">@context.CaratType.GetDisplayName()</MudTd>
         <MudTd DataLabel="عملیات">
             <div class="d-flex gap-2">
